<resources>
    <string name="app_name">Navigation Example</string>
    <string name="content_description_picture_of_restaurant_front_street_view">Picture of restaurant front street view</string>
    <string name="book_in_name">Nombre:</string>
    <string name="book_in_hint_name">Juan Pérez</string>
    <string name="book_in_people">Número de personas</string>
    <string name="book_in_hint_people">15</string>
    <string name="book_in_schedule">Horario</string>
    <string name="book_in_hint_schedule">23/10/89 - 20:30</string>
    <string name="book_in_booked">Make a review</string>
</resources>